fixtures/semantic/invalid/missing-semicolon.php
<?php

function phase3_invalid(): int
{
    return 1
}
